--- a/hyprland.conf
+++ b/hyprland.conf
@@ -63,6 +63,9 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 exec-once = waybar & hyprpaper
 exec-once = hyprpm reload -n
+exec-once = systemctl --user start hyprpolkitagent
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 
 
 #############################
@@ -73,7 +76,6 @@ exec-once = hyprpm reload -n
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 
 
 ###################
@@ -246,6 +248,12 @@ device {
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
+
+# Menu de Área de Transferência (Estilo Win+V) - Requer wofi e cliphist
+bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+
+# Maximizar janela (Fake fullscreen) - Útil para focar em uma coisa só
+bind = SUPER, F, fullscreen, 1
 
 # Print style Windows
 bind = SUPER SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
