Comment out quickshell rule and remove layerrule

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -127,10 +127,9 @@ windowrulev2 = float, class:^(zoom)$
 windowrulev2 = suppressevent maximize fullscreen, class:.*
 
 # DMS windows floating by default
-windowrulev2 = float, class:^(org.quickshell)$
+# windowrulev2 = float, class:^(org.quickshell)$
 windowrulev2 = opacity 0.9 0.9, floating:0, focus:0
 
-layerrule = noanim, ^(quickshell)$
 
 # ==================
 # KEYBINDINGS
